[gd_scene load_steps=2 format=3 uid="uid://vjo1ehqo8lbk"]

[ext_resource type="Script" uid="uid://2mqiwx1xr6c6" path="res://Menus/race_menu.gd" id="1_qhui0"]

[node name="RaceMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhui0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -81.5
offset_right = 66.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RaceButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Race"

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="ReturnButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Return to Editor"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"
